[tool.poetry]
name = "bertlv"
version = "0.2.3"
description = "Python library for BER-TLV en-/decoding."
license = "BSD-3-Clause"
authors = ["Philip Schömig <philip.schoemig@posteo.de>"]
readme = "README.rst"
repository = "https://github.com/philipschoemig/BER-TLV"
keywords = ["BER", "TLV"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Communications",
]
packages = [
    { include = "bertlv", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
anytree = "^2.8.0"

black = {version = "^19.10b0", optional = true}
bump2version = {version = "^1.0.0", optional = true}
pre-commit = {version = "^2.5.1", optional = true}
pytest = {version = "^5.4.3", optional = true}
pytest-cov = {version = "^2.10.0", optional = true}
sphinx = {version = "^3.1.1", optional = true}
tox = {version = "^3.15.2", optional = true}

[tool.poetry.extras]
dev = ["black", "bump2version", "pre-commit", "pytest", "pytest-cov", "tox"]
docs = ["sphinx"]
tests = ["pytest", "pytest-cov"]

[tool.poetry.scripts]
bertlv = 'bertlv.__main__:main'

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88

known_first_party = "bertlv"
known_third_party = [
    "anytree",
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
